Final changes before hosting on client's account. Fixed issue where the video doesn't display well on mobile phones and the logo isn't visible. This was fixed by having the video display in it's normal aspect ratio above the welcome message on phone screens so that the logo remains visible. The services page introduction has been moved to it's own separate page using the template for the other services' details. This template was also modified to include a link back to the services page for better usability. Added an 'other' option to the contact form's services enquiry dropdown list.

--- a/public/styles.css
+++ b/public/styles.css
@@ -339,14 +339,12 @@ nav h1 span {
   width: 100%;
   overflow: hidden;
 }
+
 .banner-video {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1; /* Ensure the video is just below the nav but above the banner background */
+  z-index: -1;
 }
 
 
@@ -1571,6 +1569,29 @@ form input[type="submit"]:hover {
   height: auto; /* Maintain aspect ratio */
   display: block; /* Remove default inline display */
   margin: 0 auto; /* Center image horizontally */
+}
+
+.button-container {
+  width: 300px; /* Adjust container width as needed */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+.button-link {
+  display: block;
+  padding: 10px 20px; /* Adjust padding */
+  margin: 0px 20px; /* Centering and margin */
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  border: solid 1px gold;
+  transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
+}
+
+.button-link:hover {
+  background-color: goldenrod; /* Color change on hover */
+  color: black;
+  transform: scale(1.05); /* Scale up on hover */
 }
 
 /* || RESPONSIVE STYLES */
